--- a/index.html
+++ b/index.html
@@ -20,20 +20,26 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-4">
-          <div class="row h-100 bg-success">
-            <form onsubmit="app.giftsController.handleGiftSubmit()" class="pt-5">
+          <div class="row bg-success">
+            <div class="col-12">
               <h1 class="text-light ps-3 pt-3">Gifted</h1>
-              <label for="tag" name="tag" class="text-light">Tag</label>
-              <input type="text" name="tag" class="form-control">
-              <label for="url" name="url" class="text-light">Url</label>
-              <input type="url" name="url" class="form-control">
-              <button type="submit" class="btn btn-danger mt-5">Submit</button>
-            </form>
+            </div>
+            <div class="col-12">
+              <form onsubmit="app.giftsController.handleGiftSubmit()" class="pt-5">
+                <label for="tag" name="tag" class="text-light mb-1">Tag</label>
+                <input type="text" name="tag" class="form-control mb-3">
+                <label for="url" name="url" class="text-light mb-1">Url</label>
+                <input type="url" name="url" class="form-control">
+                <button type="submit" class="btn btn-danger mt-5">Submit</button>
+              </form>
+            </div>
+            <div class="col-12">
+            </div>
           </div>
+          <div class="row h-100 bg-success"></div>
         </div>
         <div class="col-8">
           <div id="Gifts" class="row">
-
           </div>
         </div>
       </div>
